Fixed audio icon alignment.

--- a/modern-ui.css
+++ b/modern-ui.css
@@ -109,6 +109,10 @@
     margin-left: 2px;
 }
 
+/* Sound icon alignment */
+.tab-audio{
+    margin-top: 3px;
+}
 
 /********************************* Navigation / Search Bar **********************************/
 
